// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs Mod Launcher renders with mod launcher visible if there are no other visible mods 1`] = `
<DocumentFragment>
  <div
    class="full-height"
  >
    <div
      class="tabContainer nav nav-tabs nav-justified"
      role="tablist"
    >
      <div
        class="tabWrapper active nav-item"
      >
        <a
          aria-controls="panel-container-tabpane-static-modLauncher-panel"
          aria-selected="true"
          class="tabHeader nav-link active"
          data-rb-event-key="static-modLauncher-panel"
          href="#"
          id="panel-container-tab-static-modLauncher-panel"
          role="tab"
          target="_self"
        >
          <span
            class="tabTitle"
          >
            Mods
          </span>
          <button
            class="close"
            type="button"
          >
            <span
              aria-hidden="true"
            >
              ×
            </span>
            <span
              class="sr-only"
            >
              Close
            </span>
          </button>
        </a>
        <div
          class="tabDivider"
        />
      </div>
      <button
        aria-label="open mod launcher"
        class="addButton btn btn-link btn-sm"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-plus fa-w-14 "
          data-icon="plus"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 448 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M416 208H272V64c0-17.67-14.33-32-32-32h-32c-17.67 0-32 14.33-32 32v144H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h144v144c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V304h144c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"
            fill="currentColor"
          />
        </svg>
      </button>
    </div>
    <div
      class="p-0 border-0 full-height bg-white tabContainer tab-content"
    >
      <div
        aria-hidden="false"
        aria-labelledby="panel-container-tab-static-modLauncher-panel"
        class="fade h-100 paneOverrides tab-pane active show"
        id="panel-container-tabpane-static-modLauncher-panel"
        role="tabpanel"
      >
        <div
          class="d-flex flex-column h-100"
        >
          <div
            class="full-height flex-grow"
          >
            <div
              class="scrollable-area container"
            >
              <div
                class="emptyViewRoot"
              >
                <div>
                  <p>
                    We didn't find any mods to run
                  </p>
                  <h4>
                    Don't worry, there's a solution
                  </h4>
                  <img
                    alt="Workshop"
                    class="illustration"
                    src="test-file-stub"
                  />
                  <p>
                    Some mods don't run on every page.
                    <br />
                    And other mods don't run in the Sidebar.
                    <br />
                    <br />
                    Check that the mod is configured correctly.
                  </p>
                </div>
                <p>
                  Looking for new mods?
                  <br />
                  Check out the 
                  <a
                    href="https://www.pixiebrix.com/marketplace/"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    PixieBrix Marketplace
                  </a>
                </p>
              </div>
            </div>
          </div>
          <nav
            class="footer navbar navbar-expand navbar-light"
          >
            <a
              href="https://pixiebrix.com/developers-welcome"
            >
              Learn: Open the Page Editor
            </a>
            <span
              class="mx-2"
            >
              •
            </span>
             
            <a
              href="https://docs.pixiebrix.com/"
            >
              Documentation
            </a>
          </nav>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tabs renders 1`] = `
<DocumentFragment>
  <div
    class="full-height"
  >
    <div
      class="tabContainer nav nav-tabs nav-justified"
      role="tablist"
    >
      <button
        aria-label="open mod launcher"
        class="addButton btn btn-link btn-sm"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-plus fa-w-14 "
          data-icon="plus"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 448 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M416 208H272V64c0-17.67-14.33-32-32-32h-32c-17.67 0-32 14.33-32 32v144H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h144v144c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V304h144c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"
            fill="currentColor"
          />
        </svg>
      </button>
    </div>
    <div
      class="p-0 border-0 full-height bg-white tabContainer tab-content"
    />
  </div>
</DocumentFragment>
`;
